src/main/java/com/coryjuhlin/pocoscanner/antlr/PoCoParser.java
// Generated from /Users/cory/IdeaProjects/ScannerTool/src/main/antlr/PoCoParser.g4 by ANTLR 4.5
package com.coryjuhlin.pocoscanner.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PoCoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, BOOLBOP=2, BOOLUOP=3, NULL=4, ASTERISK=5, QUESTION=6, COLON=7, OPEN=8, 
		CLOSE=9, ARROW=10, EQUALSIGN=11, BAR=12, INPUTWILD=13, PLUS=14, MINUS=15, 
		POUND=16, TRANS=17, NEUTRAL=18, MAIN=19, VAR=20, IMPORT=21, TREE=22, DOT=23, 
		LPAREN=24, RPAREN=25, LBRACE=26, RBRACE=27, MAP=28, COMMA=29, AT=30, RBRACKET=31, 
		LBRACKET=32, DOLLAR=33, LTICK=34, SRETYPE=35, RETYPE=36, SREUNION=37, 
		SRECONJ=38, SREDISJ=39, SREEQUALS=40, SREPUNION=41, SRECOMP=42, SREACTIONS=43, 
		SRERESULTS=44, SREPOS=45, SRENEG=46, SUBSET=47, INFINITE=48, ACTION=49, 
		RESULT=50, FOLD=51, ID=52, INIT=53, SYM=54, APOSTROPHE=55, REWILD=56, 
		ENDTRANS=57, QUOTEDCONTENT=58, TRANSCONTENT=59;
	public static final int
		RULE_policy = 0, RULE_ppol = 1, RULE_pocopol = 2, RULE_metapol = 3, RULE_pimport = 4, 
		RULE_pimports = 5, RULE_treedef = 6, RULE_treedefs = 7, RULE_policyarg = 8, 
		RULE_policyargs = 9, RULE_transactionlist = 10, RULE_transaction = 11, 
		RULE_transbody = 12, RULE_macrodecls = 13, RULE_macrodecl = 14, RULE_vardecls = 15, 
		RULE_vardecl = 16, RULE_srecase = 17, RULE_idlist = 18, RULE_paramlist = 19, 
		RULE_execution = 20, RULE_map = 21, RULE_exch = 22, RULE_pinst = 23, RULE_args = 24, 
		RULE_object = 25, RULE_fieldlist = 26, RULE_matchs = 27, RULE_match = 28, 
		RULE_ire = 29, RULE_sre = 30, RULE_sreunion = 31, RULE_sreconj = 32, RULE_sredisj = 33, 
		RULE_sreequals = 34, RULE_srepunion = 35, RULE_srebop = 36, RULE_srecomp = 37, 
		RULE_sreactions = 38, RULE_sreresults = 39, RULE_srepos = 40, RULE_sreneg = 41, 
		RULE_sreuop = 42, RULE_id = 43, RULE_qid = 44, RULE_opparamlist = 45, 
		RULE_re = 46, RULE_function = 47, RULE_fxnname = 48, RULE_arglist = 49, 
		RULE_rebop = 50, RULE_reuop = 51, RULE_rewild = 52;
	public static final String[] ruleNames = {
		"policy", "ppol", "pocopol", "metapol", "pimport", "pimports", "treedef", 
		"treedefs", "policyarg", "policyargs", "transactionlist", "transaction", 
		"transbody", "macrodecls", "macrodecl", "vardecls", "vardecl", "srecase", 
		"idlist", "paramlist", "execution", "map", "exch", "pinst", "args", "object", 
		"fieldlist", "matchs", "match", "ire", "sre", "sreunion", "sreconj", "sredisj", 
		"sreequals", "srepunion", "srebop", "srecomp", "sreactions", "sreresults", 
		"srepos", "sreneg", "sreuop", "id", "qid", "opparamlist", "re", "function", 
		"fxnname", "arglist", "rebop", "reuop", "rewild"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, "'null'", null, null, null, "'<'", "'>'", "'=>'", 
		"'='", null, "'_'", null, "'-'", "'#'", "'transaction'", "'Neutral'", 
		"'Main'", "'var'", "'import'", "'tree'", null, null, null, null, null, 
		"'map'", null, "'@'", null, null, "'$'", "'`'", "'SRE'", "'RE'", "'Union'", 
		"'Conjunction'", "'Disjunction'", "'Equals'", "'Punion'", "'Complement'", 
		"'Actions'", "'Results'", "'Positive'", "'Negative'", "'Subset'", "'Infinite'", 
		"'Action'", "'Result'", "'fold'", null, "'<init>'", null, "'''", "'%'", 
		"'end transaction'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "BOOLBOP", "BOOLUOP", "NULL", "ASTERISK", "QUESTION", "COLON", 
		"OPEN", "CLOSE", "ARROW", "EQUALSIGN", "BAR", "INPUTWILD", "PLUS", "MINUS", 
		"POUND", "TRANS", "NEUTRAL", "MAIN", "VAR", "IMPORT", "TREE", "DOT", "LPAREN", 
		"RPAREN", "LBRACE", "RBRACE", "MAP", "COMMA", "AT", "RBRACKET", "LBRACKET", 
		"DOLLAR", "LTICK", "SRETYPE", "RETYPE", "SREUNION", "SRECONJ", "SREDISJ", 
		"SREEQUALS", "SREPUNION", "SRECOMP", "SREACTIONS", "SRERESULTS", "SREPOS", 
		"SRENEG", "SUBSET", "INFINITE", "ACTION", "RESULT", "FOLD", "ID", "INIT", 
		"SYM", "APOSTROPHE", "REWILD", "ENDTRANS", "QUOTEDCONTENT", "TRANSCONTENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PoCoParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PoCoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PolicyContext extends ParserRuleContext {
		public PimportsContext pimports() {
			return getRuleContext(PimportsContext.class,0);
		}
		public MacrodeclsContext macrodecls() {
			return getRuleContext(MacrodeclsContext.class,0);
		}
		public PpolContext ppol() {
			return getRuleContext(PpolContext.class,0);
		}
		public PolicyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_policy; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PoCoParserVisitor ) return ((PoCoParserVisitor<? extends T>)visitor).visitPolicy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PolicyContext policy() throws RecognitionException {
		PolicyContext _localctx = new PolicyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_policy);
		try {
			setState(117);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106); 
				pimports(0);
				setState(107); 
				macrodecls(0);
				setState(108); 
				ppol();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110); 
				pimports(0);
				setState(111); 
				ppol();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113); 
				macrodecls(0);
				setState(114); 
				ppol();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(116); 
				ppol();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PpolContext extends ParserRuleContext {
		public MetapolContext metapol() {
			return getRuleContext(MetapolContext.class,0);
		}
		public PocopolContext pocopol() {
			return getRuleContext(PocopolContext.class,0);
		}
		public PpolContext ppol() {
			return getRuleContext(PpolContext.class,0);
		}
		public PpolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppol; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PoCoParserVisitor ) return ((PoCoParserVisitor<? extends T>)visitor).visitPpol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpolContext ppol() throws RecognitionException {
		PpolContext _localctx = new PpolContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ppol);
		try {
			setState(124);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119); 
				metapol();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120); 
				pocopol();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(121); 
				pocopol();
				setState(122); 
				ppol();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PocopolContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(PoCoParser.LPAREN, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PoCoParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(PoCoParser.COLON, 0); }
		public VardeclsContext vardecls() {
			return getRuleContext(VardeclsContext.class,0);
		}
		public MacrodeclsContext macrodecls() {
			return getRuleContext(MacrodeclsContext.class,0);
		}
		public ExecutionContext execution() {
			return getRuleContext(ExecutionContext.class,0);
		}
		public TransactionlistContext transactionlist() {
			return getRuleContext(TransactionlistContext.class,0);
		}
		public PocopolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pocopol; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PoCoParserVisitor ) return ((PoCoParserVisitor<? extends T>)visitor).visitPocopol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PocopolContext pocopol() throws RecognitionException {
		PocopolContext _localctx = new PocopolContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pocopol);
		try {
			setState(194);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126); 
				id();
				setState(127); 
				match(LPAREN);
				setState(128); 
				paramlist(0);
				setState(129); 
				match(RPAREN);
				setState(130); 
				match(COLON);
				setState(131); 
				vardecls(0);
				setState(132); 
				macrodecls(0);
				setState(133); 
				execution(0);
				setState(134); 
				transactionlist(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136); 
				id();
				setState(137); 
				match(LPAREN);
				setState(138); 
				paramlist(0);
				setState(139); 
				match(RPAREN);
				setState(140); 
				match(COLON);
				setState(141); 
				vardecls(0);
				setState(142); 
				macrodecls(0);
				setState(143); 
				execution(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(145); 
				id();
				setState(146); 
				match(LPAREN);
				setState(147); 
				paramlist(0);
				setState(148); 
				match(RPAREN);
				setState(149); 
				match(COLON);
				setState(150); 
				macrodecls(0);
				setState(151); 
				execution(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(153); 
				id();
				setState(154); 
				match(LPAREN);
				setState(155); 
				paramlist(0);
				setState(156); 
				match(RPAREN);
				setState(157); 
				match(COLON);
				setState(158); 
				vardecls(0);
				setState(159); 
				execution(0);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(161); 
				id();
				setState(162); 
				match(LPAREN);
				setState(163); 
				paramlist(0);
				setState(164); 
				match(RPAREN);
				setState(165); 
				match(COLON);
				setState(166); 
				macrodecls(0);
				setState(167); 
				execution(0);
				setState(168); 
				transactionlist(0);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(170); 
				id();
				setState(171); 
				match(LPAREN);
				setState(172); 
				paramlist(0);
				setState(173); 
				match(RPAREN);
				setState(174); 
				match(COLON);
				setState(175); 
				vardecls(0);
				setState(176); 
				execution(0);
				setState(177); 
				transactionlist(0);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(179); 
				id();
				setState(180); 
				match(LPAREN);
				setState(181); 
				paramlist(0);
				setState(182); 
				match(RPAREN);
				setState(183); 
				match(COLON);
				setState(184); 
				execution(0);
				setState(185); 
				transactionlist(0);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(187); 
				id();
				setState(188); 
				match(LPAREN);
				setState(189); 
				paramlist(0);
				setState(190); 
				match(RPAREN);
				setState(191); 
				match(COLON);
				setState(192); 
				execution(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MetapolContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(PoCoParser.MAIN, 0); }
		public TerminalNode LPAREN() { return getToken(PoCoParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PoCoParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(PoCoParser.COLON, 0); }
		public TreedefsContext treedefs() {
			return getRuleContext(TreedefsContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public MetapolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metapol; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PoCoParserVisitor ) return ((PoCoParserVisitor<? extends T>)visitor).visitMetapol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetapolContext metapol() throws RecognitionException {
		MetapolContext _localctx = new MetapolContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_metapol);
		try {
			setState(207);
			switch (_input.LA(1)) {
			case MAIN:
				enterOuterAlt(_localctx, 1);
				{
				setState(196); 
				match(MAIN);
				setState(197); 
				match(LPAREN);
				setState(198); 
				match(RPAREN);
				setState(199); 
				match(COLON);
				setState(200); 
				treedefs(0);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(201); 
				id();
				setState(202); 
				match(LPAREN);
				setState(203); 
				match(RPAREN);
				setState(204); 
				match(COLON);
				setState(205); 
				treedefs(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PimportContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(PoCoParser.IMPORT, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public PimportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pimport; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PoCoParserVisitor ) return ((PoCoParserVisitor<? extends T>)visitor).visitPimport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PimportContext pimport() throws RecognitionException {
		PimportContext _localctx = new PimportContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pimport);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209); 
			match(IMPORT);
			setState(210); 
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PimportsContext extends ParserRuleContext {
		public PimportContext pimport() {
			return getRuleContext(PimportContext.class,0);
		}
		public PimportsContext pimports() {
			return getRuleContext(PimportsContext.class,0);
		}
		public PimportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pimports; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PoCoParserVisitor ) return ((PoCoParserVisitor<? extends T>)visitor).visitPimports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PimportsContext pimports() throws RecognitionException {
		return pimports(0);
	}

	private PimportsContext pimports(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PimportsContext _localctx = new PimportsContext(_ctx, _parentState);
		PimportsContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_pimports, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(213); 
			pimport();
			}
			_ctx.stop = _input.LT(-1);
			setState(219);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new PimportsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_pimports);
					setState(215);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(216); 
					pimport();
					}
					} 
				}
				setState(221);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class TreedefContext extends ParserRuleContext {
		public TerminalNode TREE() { return getToken(PoCoParser.TREE, 0); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public TerminalNode EQUALSIGN() { return getToken(PoCoParser.EQUALSIGN, 0); }
		public TerminalNode LPAREN() { return getToken(PoCoParser.LPAREN, 0); }
		public PolicyargsContext policyargs() {
			return getRuleContext(PolicyargsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PoCoParser.RPAREN, 0); }
		public SrebopContext srebop() {
			return getRuleContext(SrebopContext.class,0);
		}
		public TreedefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_treedef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PoCoParserVisitor ) return ((PoCoParserVisitor<? extends T>)visitor).visitTreedef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TreedefContext treedef() throws RecognitionException {
		TreedefContext _localctx = new TreedefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_treedef);
		try {
			setState(240);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(222); 
				match(TREE);
				setState(223); 
				id();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(224); 
				match(TREE);
				setState(225); 
				id();
				setState(226); 
				match(EQUALSIGN);
				setState(227); 
				id();
				setState(228); 
				match(LPAREN);
				setState(229); 
				policyargs(0);
				setState(230); 
				match(RPAREN);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(232); 
				match(TREE);
				setState(233); 
				id();
				setState(234); 
				match(EQUALSIGN);
				setState(235); 
				srebop();
				setState(236); 
				match(LPAREN);
				setState(237); 
				policyargs(0);
				setState(238); 
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TreedefsContext extends ParserRuleContext {
		public TreedefContext treedef() {
			return getRuleContext(TreedefContext.class,0);
		}
		public TreedefsContext treedefs() {
			return getRuleContext(TreedefsContext.class,0);
		}
		public TreedefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_treedefs; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PoCoParserVisitor ) return ((PoCoParserVisitor<? extends T>)visitor).visitTreedefs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TreedefsContext treedefs() throws RecognitionException {
		return treedefs(0);
	}

	private TreedefsContext treedefs(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TreedefsContext _localctx = new TreedefsContext(_ctx, _parentState);
		TreedefsContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_treedefs, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(243); 
			treedef();
			}
			_ctx.stop = _input.LT(-1);
			setState(249);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TreedefsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_treedefs);
					setState(245);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(246); 
					treedef();
					}
					} 
				}
				setState(251);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PolicyargContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(PoCoParser.LPAREN, 0); }
		public PolicyargsContext policyargs() {
			return getRuleContext(PolicyargsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PoCoParser.RPAREN, 0); }
		public TerminalNode AT() { return getToken(PoCoParser.AT, 0); }
		public TerminalNode LBRACKET() { return getToken(PoCoParser.LBRACKET, 0); }
		public PolicyargContext policyarg() {
			return getRuleContext(PolicyargContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(PoCoParser.RBRACKET, 0); }
		public PolicyargContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_policyarg; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PoCoParserVisitor ) return ((PoCoParserVisitor<? extends T>)visitor).visitPolicyarg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PolicyargContext policyarg() throws RecognitionException {
		PolicyargContext _localctx = new PolicyargContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_policyarg);
		try {
			setState(263);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(252); 
				id();
				setState(253); 
				match(LPAREN);
				setState(254); 
				policyargs(0);
				setState(255); 
				match(RPAREN);
				}
				break;
			case AT:
				enterOuterAlt(_localctx, 2);
				{
				setState(257); 
				match(AT);
				setState(258); 
				id();
				setState(259); 
				match(LBRACKET);
				setState(260); 
				policyarg();
				setState(261); 
				match(RBRACKET);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
